--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,11 +1,13 @@
-font_family      Caskaydia Cove Nerd Font Complete
-bold_font        Cascadia Code Bold
-italic_font      Cascadia Code Italic
-bold_italic_font Cascadia Code Bold Italic
-
-
-
+# font_family      Caskaydia Cove Nerd Font Complete
+# bold_font        Cascadia Code Bold
+# italic_font      Cascadia Code Italic
+# bold_italic_font Cascadia Code Bold Italic
 font_size 11.0
+
+font_family      InputMono
+bold_font        InputMono Bold
+italic_font      InputMono Italic
+bold_italic_font InputMono BoldIta
 
 window_border_width 0
 # background_opacity 0.85
@@ -17,11 +19,11 @@ enable_audio_bell no
 map f1 launch --cwd=current
 map f2 launch --cwd=current --type=tab
 
-
 initial_window_width  800
 initial_window_height 500
 remember_window_size  no
 enabled_layouts tall
+close_window_with_confirmation 0
 
 
 tab_bar_style powerline
