more neovim customizations and kitty sessions

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,30 +1,30 @@
-# font_family      Caskaydia Cove Nerd Font Complete
-# bold_font        Cascadia Code Bold
-# italic_font      Cascadia Code Italic
-# bold_italic_font Cascadia Code Bold Italic
-font_size 11.0
+font_family      Caskaydia Cove Nerd Font Complete
+bold_font        Cascadia Code Bold
+italic_font      Cascadia Code Italic
+bold_italic_font Cascadia Code Bold Italic
 
-font_family      InputMono
-bold_font        InputMono Bold
-italic_font      InputMono Italic
-bold_italic_font InputMono BoldIta
+# font_family Fira Code Regular Nerd Font Complete
+# font_family InputMono
+
+font_size 11.0
 
 window_border_width 0
 # background_opacity 0.85
 background_opacity 1
 draw_minimal_borders no
 shell fish
+editor nvim
 enable_audio_bell no
 
 map f1 launch --cwd=current
 map f2 launch --cwd=current --type=tab
+map ctrl+tab next_tab
+map ctrl+shift+tab prev_tab
+
 
 initial_window_width  800
 initial_window_height 500
 remember_window_size  no
-enabled_layouts tall
-close_window_with_confirmation 0
-
 
 tab_bar_style powerline
 active_tab_foreground   #000
