--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,15 +1,14 @@
-font_family      Caskaydia Cove Nerd Font Complete
-bold_font        Cascadia Code Bold
-italic_font      Cascadia Code Italic
-bold_italic_font Cascadia Code Bold Italic
+font_family      JetBrains Mono Regular
+bold_font        JetBrains Mono Bold
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono Bold Italic
 
-# font_family Fira Code Regular Nerd Font Complete
-# font_family InputMono
+# Render nerd fonts from symbols nerd font
+symbol_map U+E5FA-U+E62B,U+E700-U+E7C5,U+F000-U+F2E0,U+E200-U+E2A9,U+F500-U+FD46,U+f101-U+f208,U+E000-U+E00D,U+E300-U+E3EB,U+F400-U+F4A8,U+2665,U+26A1,U+F27C,U+E0A3,U+E0B4-U+E0C8,U+E0CC-U+E0D2,U+E0D4,U+23FB-U+23FE,U+2b58,U+F300-U+F313 Symbols Nerd Font
 
 font_size 11.0
 
 window_border_width 0
-# background_opacity 0.85
 background_opacity 1
 draw_minimal_borders no
 shell fish
