--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,14 +3,14 @@ bold_font        JetBrains Mono Bold
 italic_font      JetBrains Mono Italic
 bold_italic_font JetBrains Mono Bold Italic
 
+font_size 13.0
+
 # Render nerd fonts from symbols nerd font
 symbol_map U+E5FA-U+E62B,U+E700-U+E7C5,U+F000-U+F2E0,U+E200-U+E2A9,U+F500-U+FD46,U+f101-U+f208,U+E000-U+E00D,U+E300-U+E3EB,U+F400-U+F4A8,U+2665,U+26A1,U+F27C,U+E0A3,U+E0B4-U+E0C8,U+E0CC-U+E0D2,U+E0D4,U+23FB-U+23FE,U+2b58,U+F300-U+F313 Symbols Nerd Font
 
-font_size 11.0
 
 window_border_width 0
 background_opacity 1
-draw_minimal_borders no
 shell fish
 editor nvim
 enable_audio_bell no
@@ -24,13 +24,14 @@ map ctrl+shift+tab prev_tab
 initial_window_width  800
 initial_window_height 500
 remember_window_size  no
+enabled_layouts Tall
 
 tab_bar_style powerline
-active_tab_foreground   #000
-active_tab_background   #eee
-active_tab_font_style   bold-italic
-inactive_tab_foreground #444
-inactive_tab_background #999
+active_tab_foreground   #282c34
+active_tab_background   #979eab
+active_tab_font_style bold-italic
+inactive_tab_foreground #abb2bf
+inactive_tab_background #282c34
 inactive_tab_font_style normal
 
 # Cursor
