--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -9,7 +9,6 @@ font_size 13.0
 symbol_map U+E5FA-U+E62B,U+E700-U+E7C5,U+F000-U+F2E0,U+E200-U+E2A9,U+F500-U+FD46,U+f101-U+f208,U+E000-U+E00D,U+E300-U+E3EB,U+F400-U+F4A8,U+2665,U+26A1,U+F27C,U+E0A3,U+E0B4-U+E0C8,U+E0CC-U+E0D2,U+E0D4,U+23FB-U+23FE,U+2b58,U+F300-U+F313 Symbols Nerd Font
 
 
-window_border_width 0
 background_opacity 1
 shell fish
 editor nvim
@@ -20,60 +19,11 @@ map f2 launch --cwd=current --type=tab
 map ctrl+tab next_tab
 map ctrl+shift+tab prev_tab
 
-
 initial_window_width  800
 initial_window_height 500
 remember_window_size  no
 enabled_layouts Tall
+allow_remote_control yes
 
-tab_bar_style powerline
-active_tab_foreground   #282c34
-active_tab_background   #979eab
-active_tab_font_style bold-italic
-inactive_tab_foreground #abb2bf
-inactive_tab_background #282c34
-inactive_tab_font_style normal
-
-# Cursor
-cursor                   #5c6370
-cursor_text_color        #2c323c
-cursor_shape beam
-
-# Special
-foreground               #abb2bf
-background               #282c34
-# background               #2e3440
-selection_foreground     #2c323c
-selection_background     #5c6370
-
-# Black
-color0                   #2c323c
-color8                   #3e4452
-
-# Red
-color1                   #e06c75
-color9                   #e06c75
-
-# Green
-color2                   #98c379
-color10                  #98c379
-
-# Yellow
-color3                   #e5c07b
-color11                  #e5c07b
-
-# Blue
-color4                   #61afef
-color12                  #61afef
-
-# Magenta
-color5                   #c678dd
-color13                  #c678dd
-
-# Cyan
-color6                   #56b6c2
-color14                  #56b6c2
-
-# White
-color7                   #5c6370
-color15                  #abb2bf
+# include themes/onedark.theme
+include themes/catppuccin-mocha.theme
