sessionizer kitten for kitty!

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,13 +11,15 @@ symbol_map U+E5FA-U+E62B,U+E700-U+E7C5,U+F000-U+F2E0,U+E200-U+E2A9,U+F500-U+FD46
 
 background_opacity 1
 shell fish
-editor nvim
+editor /home/linuxbrew/.linuxbrew/bin/nvim
 enable_audio_bell no
 
 map f1 launch --cwd=current
 map f2 launch --cwd=current --type=tab
 map ctrl+tab next_tab
 map ctrl+shift+tab prev_tab
+map kitty_mod+d detach_window new-tab
+map kitty_mod+s kitten kittens/sessionizer.py
 
 initial_window_width  800
 initial_window_height 500
