add named tab kitten to kitty!

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -20,6 +20,7 @@ map ctrl+tab next_tab
 map ctrl+shift+tab prev_tab
 map kitty_mod+d detach_window new-tab
 map kitty_mod+s kitten kittens/sessionizer.py
+map kitty_mod+n kitten kittens/named_tab.py
 
 initial_window_width  800
 initial_window_height 500
