--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -21,12 +21,14 @@ map ctrl+shift+tab prev_tab
 map kitty_mod+d detach_window new-tab
 map kitty_mod+s kitten kittens/sessionizer.py
 map kitty_mod+n kitten kittens/named_tab.py
+map kitty_mod+l launch --cwd=current --type=tab lazygit
 
 initial_window_width  800
 initial_window_height 500
 remember_window_size  no
 enabled_layouts Tall
 allow_remote_control yes
+tab_bar_style custom
 
 # include themes/onedark.theme
 include themes/catppuccin-mocha.theme
