--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -129,7 +129,7 @@ shadow-exclude = [
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
-fading = false
+# fading = false
 # fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
@@ -215,7 +215,6 @@ opacity-rule = [
   "80:class_g     = 'Polybar'",
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
-  "90:class_g     = 'Joplin'",
   "100:class_g    = 'firefox'",
   "100:class_g    = 'Thunderbird'",
   "100: class_g   = 'Rofi'",
