--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,6 +3,9 @@ bold_font        JetBrains Mono Bold
 italic_font      JetBrains Mono Italic
 bold_italic_font JetBrains Mono Bold Italic
 
+
+
+
 font_size 13.0
 
 # Render nerd fonts from symbols nerd font
@@ -31,4 +34,6 @@ allow_remote_control yes
 tab_bar_style custom
 
 # include themes/onedark.theme
-include themes/catppuccin-mocha.theme
+# include themes/catppuccin-mocha.theme
+include themes/catppuccin-macchiato.theme
+# include themes/oxocarbon.theme
