--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,18 +3,15 @@ bold_font        JetBrains Mono Bold
 italic_font      JetBrains Mono Italic
 bold_italic_font JetBrains Mono Bold Italic
 
-
-
-
 font_size 13.0
+cursor_shape beam
 
 # Render nerd fonts from symbols nerd font
 symbol_map U+E5FA-U+E62B,U+E700-U+E7C5,U+F000-U+F2E0,U+E200-U+E2A9,U+F500-U+FD46,U+f101-U+f208,U+E000-U+E00D,U+E300-U+E3EB,U+F400-U+F4A8,U+2665,U+26A1,U+F27C,U+E0A3,U+E0B4-U+E0C8,U+E0CC-U+E0D2,U+E0D4,U+23FB-U+23FE,U+2b58,U+F300-U+F313 Symbols Nerd Font
 
-
 background_opacity 1
 shell fish
-editor /home/linuxbrew/.linuxbrew/bin/nvim
+editor nvim
 enable_audio_bell no
 
 map f1 launch --cwd=current
@@ -33,7 +30,7 @@ enabled_layouts Tall
 allow_remote_control yes
 tab_bar_style custom
 
-# include themes/onedark.theme
+include themes/onedark.theme
 # include themes/catppuccin-mocha.theme
-include themes/catppuccin-macchiato.theme
+# include themes/catppuccin-macchiato.theme
 # include themes/oxocarbon.theme
