--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -30,7 +30,7 @@ enabled_layouts Tall
 allow_remote_control yes
 tab_bar_style custom
 
-include themes/onedark.theme
+# include themes/onedark.theme
 # include themes/catppuccin-mocha.theme
-# include themes/catppuccin-macchiato.theme
+include themes/catppuccin-macchiato.theme
 # include themes/oxocarbon.theme
