update kitty and neovim configs

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -14,10 +14,10 @@ shell fish
 editor nvim
 enable_audio_bell no
 
-map f1 launch --cwd=current
-map f2 launch --cwd=current --type=tab
+map kitty_mod+enter launch --cwd=current
+map kitty_mod+t launch --cwd=current --type=tab
 map ctrl+tab next_tab
-map ctrl+shift+tab prev_tab
+map kitty_mod+shift+tab prev_tab
 map kitty_mod+d detach_window new-tab
 map kitty_mod+s kitten kittens/sessionizer.py
 map kitty_mod+n kitten kittens/named_tab.py
