--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,6 +3,7 @@ bold_font        JetBrains Mono Bold
 italic_font      JetBrains Mono Italic
 bold_italic_font JetBrains Mono Bold Italic
 
+
 font_size 13.0
 cursor_shape beam
 
@@ -22,6 +23,7 @@ map kitty_mod+d detach_window new-tab
 map kitty_mod+s kitten kittens/sessionizer.py
 map kitty_mod+n kitten kittens/named_tab.py
 map kitty_mod+l launch --cwd=current --type=tab lazygit
+map kitty_mod+p select_tab
 
 initial_window_width  800
 initial_window_height 500
