update nvim configs

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -25,6 +25,8 @@ map kitty_mod+n kitten kittens/named_tab.py
 map kitty_mod+l launch --cwd=current --type=tab lazygit
 map kitty_mod+p select_tab
 
+macos_option_as_alt yes
+
 initial_window_width  800
 initial_window_height 500
 remember_window_size  no
