add cool tab bar to kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -18,7 +18,7 @@ enable_audio_bell no
 map kitty_mod+enter launch --cwd=current
 map kitty_mod+t launch --cwd=current --type=tab
 map ctrl+tab next_tab
-map kitty_mod+shift+tab prev_tab
+map ctrl+f2 detach_window
 map kitty_mod+d detach_window new-tab
 map kitty_mod+s kitten kittens/sessionizer.py
 map kitty_mod+n kitten kittens/named_tab.py
@@ -32,7 +32,20 @@ initial_window_height 500
 remember_window_size  no
 enabled_layouts Tall
 allow_remote_control yes
+
+tab_bar_edge bottom
+tab_bar_align left
 tab_bar_style custom
+tab_bar_min_tabs 1
+tab_activity_symbol none
+bell_on_tab no
+tab_separator ""
+tab_bar_margin_width 0.0
+tab_bar_margin_height 0.0 0.0
+tab_title_template "{f'{title[:30]}…' if title.rindex(title[-1]) + 1 > 30 else (title.center(6) if (title.rindex(title[-1]) + 1) % 2 == 0 else title.center(5))}"
+active_tab_font_style   bold
+
+# tab_bar_style custom
 
 # include themes/onedark.theme
 # include themes/catppuccin-mocha.theme
