better way to handle snippets + start using ruff

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -24,6 +24,7 @@ map kitty_mod+s kitten kittens/sessionizer.py
 map kitty_mod+n kitten kittens/named_tab.py
 map kitty_mod+l launch --cwd=current --type=tab lazygit
 map kitty_mod+p select_tab
+map f9 close_other_windows_in_tab
 
 macos_option_as_alt yes
 
@@ -32,6 +33,7 @@ initial_window_height 500
 remember_window_size  no
 enabled_layouts Tall
 allow_remote_control yes
+dynamic_background_opacity yes
 
 tab_bar_edge bottom
 tab_bar_align left
