--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,7 @@
     ; email = 66522725+milkias17@users.noreply.github.com
     email = milkias.yeheyis@yahoo.com
 	name = Milkias Yeheyis
+	signingkey = A2E0FAB0B36DC0002C865054B9F7046028FA4A9B
 [core]
     editor = nvim
 [init]
@@ -10,6 +11,11 @@
 	ui = auto
 [pull]
 	ff = only
+    ; rebase = true
 [alias]
 	c = commit -m
 	ac = commit -am
+    staash = stash --all
+
+[commit]
+	gpgSign = true
