--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,25 +3,25 @@ bold_font        JetBrains Mono Bold
 italic_font      JetBrains Mono Italic
 bold_italic_font JetBrains Mono Bold Italic
 
-
 font_size 13.0
 cursor_shape beam
 
 # Render nerd fonts from symbols nerd font
-symbol_map U+E5FA-U+E62B,U+E700-U+E7C5,U+F000-U+F2E0,U+E200-U+E2A9,U+F500-U+FD46,U+f101-U+f208,U+E000-U+E00D,U+E300-U+E3EB,U+F400-U+F4A8,U+2665,U+26A1,U+F27C,U+E0A3,U+E0B4-U+E0C8,U+E0CC-U+E0D2,U+E0D4,U+23FB-U+23FE,U+2b58,U+F300-U+F313 Symbols Nerd Font
+symbol_map U+E5FA-U+E62B,U+E700-U+E7C5,U+F000-U+F2E0,U+E200-U+E2A9,U+F500-U+FD46,U+f101-U+f208,U+E000-U+E00D,U+E300-U+E3EB,U+F400-U+F4A8,U+2665,U+26A1,U+F27C,U+E0A3,U+E0B4-U+E0C8,U+E0CC-U+E0D2,U+E0D4,U+23FB-U+23FE,U+2b58,U+F300-U+F313 Symbols Nerd Font Mono
 
 background_opacity 1
-shell fish
+shell nu
 editor nvim
 enable_audio_bell no
 
 map kitty_mod+enter launch --cwd=current
 map kitty_mod+t launch --cwd=current --type=tab
 map ctrl+tab next_tab
-map ctrl+f2 detach_window
+map kitty_mod+w>d detach_window
 map kitty_mod+d detach_window new-tab
 map kitty_mod+s kitten kittens/sessionizer.py
-map kitty_mod+n kitten kittens/named_tab.py
+map kitty_mod+alt+n kitten kittens/named_tab.py
+map kitty_mod+n launch --type=tab
 map kitty_mod+l launch --cwd=current --type=tab lazygit
 map kitty_mod+p select_tab
 map f9 close_other_windows_in_tab
@@ -38,9 +38,10 @@ dynamic_background_opacity yes
 tab_bar_edge bottom
 tab_bar_align left
 tab_bar_style custom
+# tab_bar_style hidden
 tab_bar_min_tabs 1
 tab_activity_symbol none
-bell_on_tab no
+bell_on_tab yes
 tab_separator ""
 tab_bar_margin_width 0.0
 tab_bar_margin_height 0.0 0.0
