--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,10 +1,15 @@
-font_family      JetBrains Mono Regular
-bold_font        JetBrains Mono Bold
-italic_font      JetBrains Mono Italic
-bold_italic_font JetBrains Mono Bold Italic
+# font_family      JetBrains Mono Regular
+# bold_font        JetBrains Mono Bold
+# italic_font      JetBrains Mono Italic
+# bold_italic_font JetBrains Mono Bold Italic
 
 font_size 13.0
+disable_ligatures cursor
 cursor_shape beam
+cursor_trail 20
+cursor_trail_decay 0.1 0.4
+cursor_trail_start_threshold 10
+
 
 # Render nerd fonts from symbols nerd font
 symbol_map U+E5FA-U+E62B,U+E700-U+E7C5,U+F000-U+F2E0,U+E200-U+E2A9,U+F500-U+FD46,U+f101-U+f208,U+E000-U+E00D,U+E300-U+E3EB,U+F400-U+F4A8,U+2665,U+26A1,U+F27C,U+E0A3,U+E0B4-U+E0C8,U+E0CC-U+E0D2,U+E0D4,U+23FB-U+23FE,U+2b58,U+F300-U+F313 Symbols Nerd Font Mono
@@ -35,6 +40,10 @@ enabled_layouts Tall
 allow_remote_control yes
 dynamic_background_opacity yes
 
+window_margin_width 0
+window_padding_width 5
+hide_window_decorations titlebar-only
+
 tab_bar_edge bottom
 tab_bar_align left
 tab_bar_style custom
@@ -48,9 +57,18 @@ tab_bar_margin_height 0.0 0.0
 tab_title_template "{f'{title[:30]}…' if title.rindex(title[-1]) + 1 > 30 else (title.center(6) if (title.rindex(title[-1]) + 1) % 2 == 0 else title.center(5))}"
 active_tab_font_style   bold
 
+
 # tab_bar_style custom
 
 # include themes/onedark.theme
 # include themes/catppuccin-mocha.theme
 include themes/catppuccin-macchiato.theme
 # include themes/oxocarbon.theme
+
+
+# BEGIN_KITTY_FONTS
+font_family      family='Monaspace Neon Var' style=MonaspaceNeonVar-Regular variable_name=MonaspaceNeonVar features='+ss01 +ss02 +liga +calt +ss03 +ss04 +ss06'
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
