--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -9,15 +9,18 @@ cursor_shape beam
 cursor_trail 20
 cursor_trail_decay 0.1 0.4
 cursor_trail_start_threshold 10
+cursor_blink_interval 0
 
 
 # Render nerd fonts from symbols nerd font
-symbol_map U+E5FA-U+E62B,U+E700-U+E7C5,U+F000-U+F2E0,U+E200-U+E2A9,U+F500-U+FD46,U+f101-U+f208,U+E000-U+E00D,U+E300-U+E3EB,U+F400-U+F4A8,U+2665,U+26A1,U+F27C,U+E0A3,U+E0B4-U+E0C8,U+E0CC-U+E0D2,U+E0D4,U+23FB-U+23FE,U+2b58,U+F300-U+F313 Symbols Nerd Font Mono
+# symbol_map U+E5FA-U+E62B,U+E700-U+E7C5,U+F000-U+F2E0,U+E200-U+E2A9,U+F500-U+FD46,U+f101-U+f208,U+E000-U+E00D,U+E300-U+E3EB,U+F400-U+F4A8,U+2665,U+26A1,U+F27C,U+E0A3,U+E0B4-U+E0C8,U+E0CC-U+E0D2,U+E0D4,U+23FB-U+23FE,U+2b58,U+F300-U+F313 Symbols Nerd Font Mono
+include nerd-font-symbols.conf
 
 background_opacity 1
-shell nu
+shell fish
 editor nvim
 enable_audio_bell no
+notify_on_cmd_finish never
 
 map kitty_mod+enter launch --cwd=current
 map kitty_mod+t launch --cwd=current --type=tab
@@ -41,10 +44,10 @@ allow_remote_control yes
 dynamic_background_opacity yes
 
 window_margin_width 0
-window_padding_width 5
-hide_window_decorations titlebar-only
+window_padding_width 2
+hide_window_decorations yes
 
-tab_bar_edge bottom
+tab_bar_edge top
 tab_bar_align left
 tab_bar_style custom
 # tab_bar_style hidden
@@ -62,12 +65,12 @@ active_tab_font_style   bold
 
 # include themes/onedark.theme
 # include themes/catppuccin-mocha.theme
-include themes/catppuccin-macchiato.theme
 # include themes/oxocarbon.theme
+include themes/catppuccin-macchiato.theme
 
 
 # BEGIN_KITTY_FONTS
-font_family      family='Monaspace Neon Var' style=MonaspaceNeonVar-Regular variable_name=MonaspaceNeonVar features='+ss01 +ss02 +liga +calt +ss03 +ss04 +ss06'
+font_family      family="Source Code Pro"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
