--- a/.config/nvim/.luarc.json
+++ b/.config/nvim/.luarc.json
@@ -1,3 +1,10 @@
 {
-    "workspace.checkThirdParty": false
+  "$schema": "https://raw.githubusercontent.com/LuaLS/vscode-lua/master/setting/schema.json",
+  "workspace.library": [
+    "$VIMRUNTIME",
+    "$XDG_DATA_HOME/nvim/lazy",
+    "${3rd}/luv/library"
+  ],
+  "workspace.checkThirdParty": false
 }
+
